[project]
name = "not-only-poke-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.14",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-experimental==0.3.4",
    "langchain-openai==0.3.30",
    "langchain-tavily==0.2.11",
    "langfuse==3.2.6",
    "langgraph==0.6.5",
    "langgraph-checkpoint-redis==0.1.0",
    "pydantic==2.11.7",
    "redis==6.4.0",
    "uvicorn==0.35.0",
]

[tool.black]
line-length = 120
